# GDP_Group9_Automated-MAPEM-File-Creation

./: .gitattributes  .gitignore  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: task.md
configs/: 1062_LondonRdMorrisons.inventory_scoring.md  1062_LondonRdMorrisons.site_inventory.partial.json  1084_LBROakStPed.inventory_scoring.md  1084_LBROakStPed.site_inventory.partial.json  layer_rules.example.yaml  sites.example.yaml
configs/Dictionary1/: MAPEM_Element_Source_Priority_Dictionary_Making_Process (4)-2.md  MAPEM_Element_Source_Priority_Dictionary_Making_Process (4).md  MAPEM_Lane_Geometry_Connections_Overview.md  mapem_image_elements_dictionary.yaml  mapem_image_elements_overview.md
data/: README.md
data/1062_LondonRdMorrisons/1062_LondonRdMorrisons1/: 1062_RAMData_Mar26.8tx  1062_UTCForm_Jan24.docx
data/1062_LondonRdMorrisons/1062_LondonRdMorrisons2/: 1003_Cleveland Place_Overlay.dwg  1018_Snow Hill_Overlay.dwg  1021_London Rd_Overlay.dwg  1062_Safeway Store_Overlay.dwg  T1062 Safeway Store.dwg  (+2 more)
docs/: architecture.md  confidentiality.md  file_inventory_notes.md  mapem_format_requirements.md  project_plan.md  quality_metrics.md  repository_structure_notes.md
docs/client_questions/: first_meeting_questions.md
docs/reflection/: REFLECTION_TEMPLATE.md
docs/weekly_reports/: W1_TEMPLATE.md
examples/: site_model.example.json
outputs/: README.md
schemas/: site_model.schema.json
src/mapemgen/: __init__.py  cli.py  io.py  models.py  pipeline.py
tests/: test_generation.py  test_inventory.py  test_validation.py
(+16 files in other folders)
